# English_Words_Helper

./: .gitignore  README.md  main.py  package-lock.json  postgresconn.session.sql  pyproject.toml
alembic/: env.py
backend/: database.py  fastapi.py  main.py  models.py  requirements.txt  sql_alchemy.py
backend/alembic/: env.py
backend/alembic/versions/: 486c2726a7db_words_info_deleted.py  535cfcf81d9b_add_unique_constraint_to_words_info.py  8d1bf371e74c_username_is_now_unique.py  a8b2525b6b5a_password_column_added.py  e90233d688aa_initial_migration.py
frontend/: auth.html  dashbord.html  homepage.html  index.html  package-lock.json  package.json  quiz.html  register.html  vite.config.js
frontend/src/: App.vue  auth-register.css  auth.css  auth.js  dashboard.js  homepage.css  homepage.js  quiz.js  register.js  style.css
