[project]
name = "english-words-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Andruha Dreamer",email = "andreyakusok@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "translate (>=3.8.0,<4.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "streamlit (>=1.56.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
