[project]
name = "english-words-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Andruha Dreamer",email = "andreyakusok@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "translate (>=3.8.0,<4.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
