[project]
name = "english-words-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey",email = "andreyakusok@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standart] (>=0.137.1,<0.138.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "authx (>=1.7.0,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
